# X3-Backup

./: 02-my-network-config.yaml  dev.sh  docker.sh  foxy.sh  humble.sh  l4t.sh  my_password.txt
params/: .these_are_the_bash_settings  packages.txt
params/rules.d/: 10-nv-jetson-dm.rules  90-alsa-asound-tegra.rules  90-joystick.rules  99-nv-l4t-usb-device-mode.rules  usb.rules  video.rules
ros2_packages/src/robot_localization/launch/: ekf_x1_x3_launch.py
ros2_packages/src/rplidar_ros/launch/: rplidar_s2_launch.py
ros2_packages/src/x3_bringup/: package.xml  setup.cfg  setup.py
ros2_packages/src/x3_bringup/param/: ekf_x3.yaml
ros2_packages/src/x3_bringup/x3_bringup/: x3_driver.py
ros2_packages/src/x3_control/: setup.cfg  setup.py
ros2_packages/src/x3_control/x3_control/: x3_joy.py
ros2_packages/src/x3_description/: CMakeLists.txt  package.xml
ros2_packages/src/x3_nav/: package.xml
ros2_packages/src/x3_slam/: CMakeLists.txt  package.xml
rules.d/: .video.rules.swp  99-tegra-devices.rules
src/imu_filter_madgwick/config/: imu_filter.yaml
src/x3_base_node/: CMakeLists.txt  package.xml
src/x3_bringup/launch/: x3_bringup_launch.py
src/x3_bringup/param/: imu_filter_param.yaml
src/x3_control/: package.xml
src/x3_control/x3_control/: x3_keyboard.py
src/x3_description/launch/: description.launch.py
src/x3_description/urdf/: gazebo_properties.xacro  x3.urdf.xacro  x3_body.xacro
src/x3_nav/: CMakeLists.txt
src/x3_nav/maps/: x3.pgm
src/x3_slam/: CMakeLists.txt
src/x3_slam/config/: robot_slam.rviz
src/x3_slam/launch/: lidar.launch.py
(+11 files in other folders)
